changing the headline

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
       <div>
         <a href="/poem.html" target="_blank">A poem</a>
       </div>
+      <hr />
+      <p><i>These two links don't work yet sadly:(</i></p>
+      <p>
+        <i
+          >I will fix this in Github soon. Until that, there are some tiny
+          hearts</i
+        >
+      </p>
+      <img src="/heart.JPG" alt="" />
+      <img src="/heart.JPG" alt="" />
+      <img src="/heart.JPG" alt="" />
     </nav>
     <main>
       <section>
