correcting heart immage

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           hearts</i
         >
       </p>
-      <img src="/heart.JPG" alt="" />
-      <img src="/heart.JPG" alt="" />
-      <img src="/heart.JPG" alt="" />
+      <img src="./heart.JPG" alt="" />
+      <img src="./heart.JPG" alt="" />
+      <img src="./heart.JPG" alt="" />
     </nav>
     <main>
       <section>
